--- a/index.html
+++ b/index.html
@@ -135,7 +135,12 @@
            </div>
           </div>
           <div class="row">
-           <div class="large-8 push-2 columns">
+           <div class="large-8 pull-1 columns">
+            <h1 style="font-family:'lato' sans-serif; text-transform:uppercase;">Scoliosis accounts for 80% of spinal deformities.</h1>
+            <p><h4 style="font-family:'lato' sans-serif;">Many people who suffer from mild scoliosis go undiagnosed. Though they may not have noticeable symptoms, this slight deformity can increase in severity as they age.</h4></p>
+            <p><h4 style="font-family:'lato' sans-serif;">It's important that everyone keeps a close eye on their spinal health, but many people don't know what to look for. We sought out to make scoliosis detection an easy, in-home experience.</h4></p>
+           </div>
+           <div class="large-4 pull-1 columns">
              <div class="container">
                <div id="percent"></div>
                <svg id="svg"></svg>
