More copy and disclaimer

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
           <div class="row">
            <div class="large-8 pull-1 columns">
             <h1 style="font-family:'lato' sans-serif; text-transform:uppercase;">Scoliosis accounts for 80% of spinal deformities.</h1>
-            <p><h4 style="font-family:'lato' sans-serif;">Many people who suffer from mild scoliosis go undiagnosed. Though they may not have noticeable symptoms, this slight deformity can increase in severity as they age.</h4></p>
-            <p><h4 style="font-family:'lato' sans-serif;">It's important that everyone keeps a close eye on their spinal health, but many people don't know what to look for. We sought out to make scoliosis detection an easy, in-home experience.</h4></p>
+            <p><h4 style="font-family:'lato' sans-serif;">Many people who suffer from mild scoliosis go undiagnosed. Though they may not have noticeable symptoms, this deformity can increase in severity as they age.</h4></p>
+            <p><h4 style="font-family:'lato' sans-serif;">It's important that everyone keeps a close eye on their spinal health, but you may not know what to look for. We sought out to make scoliosis detection an easy, in-home experience.</h4></p>
            </div>
            <div class="large-4 pull-1 columns">
              <div class="container">
@@ -147,6 +147,15 @@
                <p><label for="perc-input">67% of scoliosis sufferers go undiagnosed</label><input style="display:none;" maxlength="2" type="text" id="input" value="67"/></p>
                <a class="btn" id="run"></a>
              </div>
+           </div>
+          </div>
+          <div class="row">
+           <div class="large-12 columns">
+            <br>
+            <br>
+            <h5 style="text-align:center; font-family:'lato' sans-serif">We developed an easy way for you to detect a very common health issue from the comfort of your home. With your iPhone, you can now detect signs of Scoliosis and connect with a doctor if the app thinks you are likely to have the deformity.</h5>
+            <h6 style="text-align:center; font-family'lato' sans-serif; text-transform:uppercase; font-size:0.65rem;">*this app only provides estimates and is not for proper medical diagnosis. If you think you may have a health issue, please consult your family physician.</h6>
+            <br>
            </div>
           </div>
         </span>
